# filesystem

./: .copier-answers.yml  Cargo.toml  README.md  act.toml  justfile
.github/workflows/: ci.yml
e2e/: append_file.hurl  copy_file.hurl  delete_file.hurl  directory_ops.hurl  directory_tree.hurl  exists.hurl  get_file_info.hurl  info.hurl  list_directory.hurl  list_tools.hurl  move_file.hurl  read_multiple_files.hurl  read_write.hurl  run.sh  search_files.hurl
skill/: SKILL.md
src/: lib.rs
