[package]
name = "component-filesystem"
description = "File system operations (read, write, list, search, move)"
version = "0.2.0"
edition = "2024"

[dependencies]
act-sdk = "0.4"
serde_json = "1.0.149"
wit-bindgen = { version = "0.57", features = ["async-spawn"] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = "z"

[lib]
crate-type = ["cdylib"]
