[package]
name = "component-filesystem"
description = "File system operations (read, write, list, search, move)"
version = "0.3.2"
edition = "2024"

[dependencies]
act-sdk = "0.9"
wit-bindgen = { version = "0.58", features = ["async-spawn"] }
serde = { version = "1", features = ["derive"] }
schemars = "1"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = "z"

[lib]
crate-type = ["cdylib"]
